feat(security): security with based db role